--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -1,8 +1,8 @@
 environment: development
-name: ffc-template-node
-namespace: ffc-demo
-workstream: ffc-demo
-image: ffc-template-node
+name: ffc-pay-batch-verifier
+namespace: ffc-pay
+workstream: ffc-pay
+image: ffc-pay-batch-verifier
 
 labels: {}
 
@@ -10,10 +10,10 @@ appInsights:
   key:
 
 containerConfigMap:
-  name: ffc-template-node-config-map
+  name: ffc-pay-batch-verifier-config-map
 
 containerSecret:
-  name: ffc-template-node-container-secret
+  name: ffc-pay-batch-verifier-container-secret
   type: Opaque
 
 deployment:
