--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
+  "name": "ffc-pay-batch-verifier",
   "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "description": "Validate payment batches",
+  "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
