--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -5,11 +5,23 @@ services:
   ffc-pay-batch-verifier:
     build:
       target: development
+    depends_on:
+      - ffc-pay-batch-verifier-azurite
     image: ffc-pay-batch-verifier-development
     container_name: ffc-pay-batch-verifier-development
     ports:
-      - "3000:3000"
-      - "9229:9229"
+      - "9250:9229"
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
+    environment:
+      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-pay-batch-processor-azurite:10000/devstoreaccount1;
+
+  ffc-pay-batch-verifier-azurite:
+    volumes:
+      - azurite_data:/data
+    ports:
+      - "10050:10000"
+
+volumes:
+  azurite_data:
