--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -7,6 +7,8 @@ services:
       target: development
     image: ffc-pay-batch-verifier-development
     container_name: ffc-pay-batch-verifier-test
+    depends_on:
+      - ffc-pay-batch-verifier-azurite
     command: npm run test
     volumes:
       - ./app:/home/node/app
@@ -14,3 +16,5 @@ services:
       - ./test-output:/home/node/test-output
       - ./jest.config.js:/home/node/jest.config.js
       - ./package.json:/home/node/package.json
+    environment:
+      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-pay-batch-processor-azurite:10000/devstoreaccount1;
