--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,10 @@ services:
     container_name: ffc-pay-batch-verifier
     environment:
       APPINSIGHTS_CLOUDROLE: ffc-pay-batch-verifier-local
-      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      AZURE_STORAGE_ACCOUNT_NAME: ${AZURE_STORAGE_ACCOUNT_NAME:-devstoreaccount1}
+      AZURE_STORAGE_USE_CONNECTION_STRING: "true"
+      AZURE_STORAGE_CREATE_CONTAINERS: "true"
+
+  ffc-pay-batch-verifier-azurite:
+    image: mcr.microsoft.com/azure-storage/azurite:3.17.1
+    command: "azurite-blob --loose --blobHost 0.0.0.0"
