--- a/helm/ffc-pay-batch-verifier/templates/config-map.yaml
+++ b/helm/ffc-pay-batch-verifier/templates/config-map.yaml
@@ -2,6 +2,10 @@
 {{- define "ffc-pay-batch-verifier.config-map" -}}
 data:
   NODE_ENV: {{ quote .Values.environment }}
-  PORT: {{ quote .Values.container.port }}
   APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
+  AZURE_STORAGE_ACCOUNT_NAME: {{ quote .Values.container.azureStorageAccountName }}
+  AZURE_STORAGE_CONNECTION_STRING: {{ quote .Values.container.azureStorageConnectionString }}
+  AZURE_STORAGE_USE_CONNECTION_STRING: {{ quote .Values.container.azureStorageUseConnectionString }}
+  AZURE_STORAGE_CREATE_CONTAINERS: {{ quote .Values.container.azureStorageCreateContainers }}
+  POLLING_INTERVAL: {{ quote .Values.container.pollingInterval }}
 {{- end -}}
