--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -1,4 +1,5 @@
 environment: development
+environmentCode:
 name: ffc-pay-batch-verifier
 namespace: ffc-pay
 workstream: ffc-pay
@@ -23,23 +24,15 @@ deployment:
   minReadySeconds: 0
 
 container:
-  imagePullPolicy: IfNotPresent
-  requestMemory: 10Mi
-  requestCpu: 10m
-  limitMemory: 40Mi
-  limitCpu: 40m
-  port: 3000
+  imagePullPolicy: Always
+  requestMemory: 100Mi
+  requestCpu: 60m
+  limitMemory: 200Mi
+  limitCpu: 200m
+  azureStorageAccountName: ffcpay
+  azureStorageConnectionString: dummy
+  azureStorageUseConnectionString: false
+  azureStorageCreateContainers: false
+  pollingInterval: 10000
 
-livenessProbe:
-  path: /healthz
-  port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
-
-readinessProbe:
-  path: /healthy
-  port: 3000
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  failureThreshold: 3
+aadPodIdentity: true
