--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@azure/identity": "2.0.5",
     "@azure/storage-blob": "12.9.0",
-    "applicationinsights": "2.2.1"
+    "applicationinsights": "2.2.1",
+    "joi": "17.6.3",
+    "log-timestamp": "0.3.0"
   },
   "devDependencies": {
     "jest": "27.5.1",
