--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -6,7 +6,7 @@ services:
     build:
       target: development
     depends_on:
-      - ffc-pay-batch-verifier-azurite
+      - ffc-pay-batch-azurite
     image: ffc-pay-batch-verifier-development
     container_name: ffc-pay-batch-verifier-development
     ports:
@@ -15,13 +15,13 @@ services:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
     environment:
-      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-pay-batch-verifier-azurite:10000/devstoreaccount1;
+      AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://ffc-pay-batch-azurite:10000/devstoreaccount1;
 
-  ffc-pay-batch-verifier-azurite:
+  ffc-pay-batch-azurite:
     volumes:
       - azurite_data:/data
     ports:
-      - "10050:10000"
+      - "10060:10000"
 
 volumes:
   azurite_data:
