--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "OGL-UK-3.0",
   "dependencies": {
     "@azure/identity": "2.0.5",
-    "@azure/storage-blob": "^12.12.0",
-    "applicationinsights": "2.2.1",
+    "@azure/storage-blob": "12.12.0",
+    "applicationinsights": "2.3.5",
     "joi": "17.6.3",
     "log-timestamp": "0.3.0"
   },
