--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,5 @@ services:
   ffc-pay-batch-azurite:
     image: mcr.microsoft.com/azure-storage/azurite:3.20.1
     command: "azurite-blob --loose --blobHost 0.0.0.0"
+    labels:
+      com.docker.compose.pay.role: ffc-pay-batch-azurite
