--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
-  "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "name": "ffc-pay-batch-verifier",
+  "version": "1.0.0",
+  "description": "Validate payment batches",
+  "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
@@ -14,17 +14,22 @@
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
   "author": "Defra",
-  "contributors": [],
+  "contributors": [
+    "John Watson <john.watson2@rpa.gov.uk>"
+  ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "^20.2.1",
-    "applicationinsights": "^2.2.1"
+    "@azure/identity": "2.0.5",
+    "@azure/storage-blob": "12.10.0",
+    "applicationinsights": "2.3.5",
+    "joi": "17.6.3",
+    "log-timestamp": "0.3.0"
   },
   "devDependencies": {
-    "jest": "^27.5.1",
-    "jest-junit": "^13.0.0",
-    "nodemon": "^2.0.15",
-    "standard": "^16.0.4"
+    "jest": "27.5.1",
+    "jest-junit": "13.0.0",
+    "nodemon": "2.0.20",
+    "standard": "16.0.4"
   },
   "standard": {
     "globals": [
