set deployment as empty object

--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -17,8 +17,7 @@ containerSecret:
   name: ffc-pay-batch-verifier-container-secret
   type: Opaque
 
-deployment:
-  replicas: 1
+deployment: {}
 
 container:
   requestMemory: 100Mi
