--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -17,14 +17,9 @@ containerSecret:
   name: ffc-pay-batch-verifier-container-secret
   type: Opaque
 
-deployment:
-  restartPolicy: Always
-  priorityClassName: default
-  replicas: 1
-  minReadySeconds: 0
+deployment: {}
 
 container:
-  imagePullPolicy: Always
   requestMemory: 100Mi
   requestCpu: 60m
   limitMemory: 200Mi
