--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -15,7 +15,8 @@
   },
   "author": "Defra",
   "contributors": [
-    "John Watson <john.watson2@rpa.gov.uk>"
+    "John Watson <john.watson2@rpa.gov.uk>",
+    "Simon Dunn <simon.dunn1@defra.gov.uk>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
