--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -16,7 +16,8 @@
   "author": "Defra",
   "contributors": [
     "John Watson <john.watson2@rpa.gov.uk>",
-    "Simon Dunn <simon.dunn1@defra.gov.uk>"
+    "Simon Dunn <simon.dunn1@defra.gov.uk>",
+    "Kirsten Williamson <kirsten.williamson@kainos.com>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
