--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Defra",
   "contributors": [
-    "John Watson <john.watson2@rpa.gov.uk>",
+    "John Watson <john.watson1@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
     "Kirsten Williamson <kirsten.williamson@kainos.com>"
   ],
