--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -15,7 +15,7 @@
   },
   "author": "Defra",
   "contributors": [
-    "John Watson <john.watson2@rpa.gov.uk>",
+    "John Watson <john.watson1@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
     "Kirsten Williamson <kirsten.williamson@kainos.com>"
   ],
@@ -30,7 +30,7 @@
   "devDependencies": {
     "jest": "27.5.1",
     "jest-junit": "13.0.0",
-    "nodemon": "2.0.20",
+    "nodemon": "3.0.1",
     "standard": "16.0.4"
   },
   "standard": {
