--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -17,7 +17,8 @@
   "contributors": [
     "John Watson <john.watson1@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
-    "Kirsten Williamson <kirsten.williamson@kainos.com>"
+    "Kirsten Williamson <kirsten.williamson@kainos.com>",
+    "Sam Plackett <samuel.plackett@eviden.com>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
