Migrate to V10 Pipeline

--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -31,7 +31,7 @@ container:
   pollingInterval: 10000
   pollingActive: true
 
-aadPodIdentity: true
+workloadIdentity: true
 
 azureIdentity:
   clientID: not-a-real-clientID
