--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.3.11",
+  "version": "1.3.12",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -18,11 +18,12 @@
     "John Watson <john.watson1@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
     "Kirsten Williamson <kirsten.williamson@kainos.com>",
-    "Sam Plackett <samuel.plackett@eviden.com>"
+    "Sam Plackett <samuel.plackett@eviden.com>",
+    "Leigh Godson <leigh.godson@eviden.com>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@azure/identity": "4.2.1",
+    "@azure/identity": "4.4.1",
     "@azure/storage-blob": "12.13.0",
     "applicationinsights": "2.9.6",
     "joi": "17.6.3",
