--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-pay-batch-verifier",
-  "version": "1.3.12",
+  "version": "1.3.13",
   "description": "Validate payment batches",
   "homepage": "https://github.com/DEFRA/ffc-pay-batch-verifier",
   "main": "app/index.js",
@@ -18,8 +18,8 @@
     "John Watson <john.watson1@defra.gov.uk>",
     "Simon Dunn <simon.dunn1@defra.gov.uk>",
     "Kirsten Williamson <kirsten.williamson@kainos.com>",
-    "Sam Plackett <samuel.plackett@eviden.com>",
-    "Leigh Godson <leigh.godson@eviden.com>"
+    "Sam Plackett <samuel.plackett@atos.net>",
+    "Leigh Godson <leigh.godson@atos.net>"
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
