--- a/helm/ffc-pay-batch-verifier/values.yaml
+++ b/helm/ffc-pay-batch-verifier/values.yaml
@@ -17,7 +17,8 @@ containerSecret:
   name: ffc-pay-batch-verifier-container-secret
   type: Opaque
 
-deployment: {}
+deployment:
+  priorityClassName: high
 
 container:
   requestMemory: 150Mi
